# High-Frequency-Data-Gateway

./: CMakeLists.txt  README.md  run.sh
include/: IMessageProcessor.h  Message.h  MessageQueue.h
src/: MessageProcessor.cpp  MessageQueue.cpp  main.cpp
tests/: MessageQueue_test.cpp
